interpreteur/interpreteur.output
Terminals unused in grammar

   tCOPB
   tCOPA
   tERROR


Grammar

    0 $accept: Instruction $end

    1 Instruction: Add Instruction
    2            | Mul Instruction
    3            | Sou Instruction
    4            | Div Instruction
    5            | Inf Instruction
    6            | Sup Instruction
    7            | And Instruction
    8            | Or Instruction
    9            | Equ Instruction
   10            | Afc Instruction
   11            | Cop Instruction
   12            | Jmf Instruction
   13            | Jmp Instruction
   14            | %empty

   15 Add: tADD tNB tNB tNB

   16 Mul: tMUL tNB tNB tNB

   17 Sou: tSOU tNB tNB tNB

   18 Div: tDIV tNB tNB tNB

   19 Inf: tINF tNB tNB tNB

   20 Sup: tSUP tNB tNB tNB

   21 And: tAND tNB tNB tNB

   22 Or: tOR tNB tNB tNB

   23 Equ: tEQU tNB tNB tNB

   24 Afc: tAFC tNB tNB

   25 Cop: tCOP tNB tNB

   26 Jmf: tJMF tNB tNB

   27 Jmp: tJMP tNB


Terminals, with rules where they appear

$end (0) 0
error (256)
tNB (258) 15 16 17 18 19 20 21 22 23 24 25 26 27
tADD (259) 15
tMUL (260) 16
tSOU (261) 17
tDIV (262) 18
tAFC (263) 24
tCOP (264) 25
tCOPB (265)
tCOPA (266)
tEQU (267) 23
tSUP (268) 20
tINF (269) 19
tAND (270) 21
tOR (271) 22
tJMF (272) 26
tJMP (273) 27
tERROR (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
Instruction (21)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14, on right: 0 1 2 3 4
    5 6 7 8 9 10 11 12 13
Add (22)
    on left: 15, on right: 1
Mul (23)
    on left: 16, on right: 2
Sou (24)
    on left: 17, on right: 3
Div (25)
    on left: 18, on right: 4
Inf (26)
    on left: 19, on right: 5
Sup (27)
    on left: 20, on right: 6
And (28)
    on left: 21, on right: 7
Or (29)
    on left: 22, on right: 8
Equ (30)
    on left: 23, on right: 9
Afc (31)
    on left: 24, on right: 10
Cop (32)
    on left: 25, on right: 11
Jmf (33)
    on left: 26, on right: 12
Jmp (34)
    on left: 27, on right: 13


State 0

    0 $accept: . Instruction $end

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 14
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 1

   15 Add: tADD . tNB tNB tNB

    tNB  shift, and go to state 28


State 2

   16 Mul: tMUL . tNB tNB tNB

    tNB  shift, and go to state 29


State 3

   17 Sou: tSOU . tNB tNB tNB

    tNB  shift, and go to state 30


State 4

   18 Div: tDIV . tNB tNB tNB

    tNB  shift, and go to state 31


State 5

   24 Afc: tAFC . tNB tNB

    tNB  shift, and go to state 32


State 6

   25 Cop: tCOP . tNB tNB

    tNB  shift, and go to state 33


State 7

   23 Equ: tEQU . tNB tNB tNB

    tNB  shift, and go to state 34


State 8

   20 Sup: tSUP . tNB tNB tNB

    tNB  shift, and go to state 35


State 9

   19 Inf: tINF . tNB tNB tNB

    tNB  shift, and go to state 36


State 10

   21 And: tAND . tNB tNB tNB

    tNB  shift, and go to state 37


State 11

   22 Or: tOR . tNB tNB tNB

    tNB  shift, and go to state 38


State 12

   26 Jmf: tJMF . tNB tNB

    tNB  shift, and go to state 39


State 13

   27 Jmp: tJMP . tNB

    tNB  shift, and go to state 40


State 14

    0 $accept: Instruction . $end

    $end  shift, and go to state 41


State 15

    1 Instruction: Add . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 42
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 16

    2 Instruction: Mul . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 43
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 17

    3 Instruction: Sou . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 44
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 18

    4 Instruction: Div . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 45
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 19

    5 Instruction: Inf . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 46
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 20

    6 Instruction: Sup . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 47
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 21

    7 Instruction: And . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 48
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 22

    8 Instruction: Or . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 49
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 23

    9 Instruction: Equ . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 50
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 24

   10 Instruction: Afc . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 51
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 25

   11 Instruction: Cop . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 52
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 26

   12 Instruction: Jmf . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 53
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 27

   13 Instruction: Jmp . Instruction

    tADD  shift, and go to state 1
    tMUL  shift, and go to state 2
    tSOU  shift, and go to state 3
    tDIV  shift, and go to state 4
    tAFC  shift, and go to state 5
    tCOP  shift, and go to state 6
    tEQU  shift, and go to state 7
    tSUP  shift, and go to state 8
    tINF  shift, and go to state 9
    tAND  shift, and go to state 10
    tOR   shift, and go to state 11
    tJMF  shift, and go to state 12
    tJMP  shift, and go to state 13

    $default  reduce using rule 14 (Instruction)

    Instruction  go to state 54
    Add          go to state 15
    Mul          go to state 16
    Sou          go to state 17
    Div          go to state 18
    Inf          go to state 19
    Sup          go to state 20
    And          go to state 21
    Or           go to state 22
    Equ          go to state 23
    Afc          go to state 24
    Cop          go to state 25
    Jmf          go to state 26
    Jmp          go to state 27


State 28

   15 Add: tADD tNB . tNB tNB

    tNB  shift, and go to state 55


State 29

   16 Mul: tMUL tNB . tNB tNB

    tNB  shift, and go to state 56


State 30

   17 Sou: tSOU tNB . tNB tNB

    tNB  shift, and go to state 57


State 31

   18 Div: tDIV tNB . tNB tNB

    tNB  shift, and go to state 58


State 32

   24 Afc: tAFC tNB . tNB

    tNB  shift, and go to state 59


State 33

   25 Cop: tCOP tNB . tNB

    tNB  shift, and go to state 60


State 34

   23 Equ: tEQU tNB . tNB tNB

    tNB  shift, and go to state 61


State 35

   20 Sup: tSUP tNB . tNB tNB

    tNB  shift, and go to state 62


State 36

   19 Inf: tINF tNB . tNB tNB

    tNB  shift, and go to state 63


State 37

   21 And: tAND tNB . tNB tNB

    tNB  shift, and go to state 64


State 38

   22 Or: tOR tNB . tNB tNB

    tNB  shift, and go to state 65


State 39

   26 Jmf: tJMF tNB . tNB

    tNB  shift, and go to state 66


State 40

   27 Jmp: tJMP tNB .

    $default  reduce using rule 27 (Jmp)


State 41

    0 $accept: Instruction $end .

    $default  accept


State 42

    1 Instruction: Add Instruction .

    $default  reduce using rule 1 (Instruction)


State 43

    2 Instruction: Mul Instruction .

    $default  reduce using rule 2 (Instruction)


State 44

    3 Instruction: Sou Instruction .

    $default  reduce using rule 3 (Instruction)


State 45

    4 Instruction: Div Instruction .

    $default  reduce using rule 4 (Instruction)


State 46

    5 Instruction: Inf Instruction .

    $default  reduce using rule 5 (Instruction)


State 47

    6 Instruction: Sup Instruction .

    $default  reduce using rule 6 (Instruction)


State 48

    7 Instruction: And Instruction .

    $default  reduce using rule 7 (Instruction)


State 49

    8 Instruction: Or Instruction .

    $default  reduce using rule 8 (Instruction)


State 50

    9 Instruction: Equ Instruction .

    $default  reduce using rule 9 (Instruction)


State 51

   10 Instruction: Afc Instruction .

    $default  reduce using rule 10 (Instruction)


State 52

   11 Instruction: Cop Instruction .

    $default  reduce using rule 11 (Instruction)


State 53

   12 Instruction: Jmf Instruction .

    $default  reduce using rule 12 (Instruction)


State 54

   13 Instruction: Jmp Instruction .

    $default  reduce using rule 13 (Instruction)


State 55

   15 Add: tADD tNB tNB . tNB

    tNB  shift, and go to state 67


State 56

   16 Mul: tMUL tNB tNB . tNB

    tNB  shift, and go to state 68


State 57

   17 Sou: tSOU tNB tNB . tNB

    tNB  shift, and go to state 69


State 58

   18 Div: tDIV tNB tNB . tNB

    tNB  shift, and go to state 70


State 59

   24 Afc: tAFC tNB tNB .

    $default  reduce using rule 24 (Afc)


State 60

   25 Cop: tCOP tNB tNB .

    $default  reduce using rule 25 (Cop)


State 61

   23 Equ: tEQU tNB tNB . tNB

    tNB  shift, and go to state 71


State 62

   20 Sup: tSUP tNB tNB . tNB

    tNB  shift, and go to state 72


State 63

   19 Inf: tINF tNB tNB . tNB

    tNB  shift, and go to state 73


State 64

   21 And: tAND tNB tNB . tNB

    tNB  shift, and go to state 74


State 65

   22 Or: tOR tNB tNB . tNB

    tNB  shift, and go to state 75


State 66

   26 Jmf: tJMF tNB tNB .

    $default  reduce using rule 26 (Jmf)


State 67

   15 Add: tADD tNB tNB tNB .

    $default  reduce using rule 15 (Add)


State 68

   16 Mul: tMUL tNB tNB tNB .

    $default  reduce using rule 16 (Mul)


State 69

   17 Sou: tSOU tNB tNB tNB .

    $default  reduce using rule 17 (Sou)


State 70

   18 Div: tDIV tNB tNB tNB .

    $default  reduce using rule 18 (Div)


State 71

   23 Equ: tEQU tNB tNB tNB .

    $default  reduce using rule 23 (Equ)


State 72

   20 Sup: tSUP tNB tNB tNB .

    $default  reduce using rule 20 (Sup)


State 73

   19 Inf: tINF tNB tNB tNB .

    $default  reduce using rule 19 (Inf)


State 74

   21 And: tAND tNB tNB tNB .

    $default  reduce using rule 21 (And)


State 75

   22 Or: tOR tNB tNB tNB .

    $default  reduce using rule 22 (Or)
